# Multi-Process-server-OSP1

./: .gitignore  README.md
Server_Client_OSP1G/: CMakeLists.txt  Makefile  main.c
Server_Client_OSP1G/Validations/: image_validations.c  image_validations.h
Server_Host_OSP1G/: CMakeLists.txt  Makefile  main.c  pre_heavy_process
Server_Host_OSP1G/image_admin/: image_receiver.c  image_receiver.h  sobel.py
Server_Host_OSP1G/modes/: continuous_mode.c  continuous_mode.h  delegation_mode.c  delegation_mode.h  file_descriptor_manager.c  file_descriptor_messager.h  heavy_process.c  heavy_process.h  pre_heavy_process.c  pre_heavy_process.h  sequential.c  sequential.h  serial_mode.c  serial_mode.h
Server_Host_OSP1G/proc_structures/: proc_structure.c  proc_structure.h
Visualizer_OSP1G/: continuous.txt  delegation.txt  heavy_process.txt  main.py  pre_heavy_process.txt  sequential.txt  serial.txt
